--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "530390cf",
    "metadata": {},
    "outputs": [],
@@ -53,11 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ffe1047e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,11 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f396b717",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.20.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.__version__)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,11 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "31c9f6a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "null_vector = np.zeros(10)\n",
+    "print(null_vector)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,11 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "31e8ec2e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([1,2,3,50,60,70])\n",
+    "print('%d bytes' %(x.size * x.itemsize))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,11 +151,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "593cd80f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "%run `python -c \"import numpy; numpy.info(numpy.add)\"`\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,11 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2edf3c42",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "null_vector2 = np.zeros(10)\n",
+    "null_vector2[4] = 1\n",
+    "print(null_vector2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,11 +205,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d8b86640",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 13 16 19 22 25 28 31 34 37 40 43 46 49]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vector7 = np.arange(10,50,3)\n",
+    "print(vector7)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,11 +232,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ec044bb5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[49 46 43 40 37 34 31 28 25 22 19 16 13 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vector7[::-1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,11 +258,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "d9e39043",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 2], [3, 4, 5], [6, 7, 8]]\n",
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix3x3 = [[0,1,2],[3,4,5],[6,7,8]]\n",
+    "print(matrix3x3)\n",
+    "print(np.array(matrix3x3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,11 +289,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b2f3c90a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0, 1, 4]),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix10 = [1,2,0,0,4,0]\n",
+    "print(np.nonzero(matrix10))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,11 +316,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "5b607b5c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix11 = np.identity(3)\n",
+    "print(matrix11)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,11 +345,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ab21ed50",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0.3867436   0.67772076  0.10542328]\n",
+      "  [-0.02839234 -0.05571454  0.69498556]\n",
+      "  [-1.02469354  1.12573154  0.04312284]]\n",
+      "\n",
+      " [[-0.39596036  0.43939931  0.68850365]\n",
+      "  [-1.22328133  1.00163705 -0.13262149]\n",
+      "  [ 0.31614716 -0.26813058  0.01559346]]\n",
+      "\n",
+      " [[-0.24800057  1.9157412  -1.11991079]\n",
+      "  [ 1.7313922   0.23690185  0.21349614]\n",
+      "  [ 1.25509481 -1.13333076  0.29507059]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix12 = np.random.randn(3,3,3)\n",
+    "print(matrix12)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -245,11 +382,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c0066de5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.2191645984123842 1.8357279137640559\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix13 = np.random.randn(10,10)\n",
+    "print(np.min(matrix13),np.max(matrix13))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,11 +409,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9672d023",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.04684368 -0.38076388  1.80143282  1.87140765  0.03332949  0.336696\n",
+      "  0.94437474 -0.21063895 -0.42748328  0.48210439  0.24361943 -0.52755906\n",
+      " -0.09066742 -1.89869549  1.54334277  1.10818337  1.10299123  0.56623338\n",
+      " -0.19191566 -0.32004951 -0.58585026 -0.43816622  0.3820373   0.18477467\n",
+      "  1.00492437 -0.84276297 -1.83404344  0.88654398  1.22601357 -0.07779914]\n",
+      "0.19794858505833832\n"
+     ]
+    }
+   ],
+   "source": [
+    "vector14 = np.random.randn(30)\n",
+    "print(vector14)\n",
+    "print(np.mean(vector14))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -277,11 +442,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "a55b6666",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 1]\n",
+      " [1 0 1]\n",
+      " [1 1 1]]\n",
+      "Z = np.ones((10,10))\n",
+      "Z[1:-1,1:-1] = 0\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "array15 = ([[1,1,1],[1,0,1],[1,1,1]])\n",
+    "print(np.array(array15))\n",
+    "answer(15)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -293,11 +475,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "b2df3a8a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  0  0  0  0  0  0  0]\n",
+      " [ 0 21 21 21 21 21 21  0]\n",
+      " [ 0 21 21 21 21 21 21  0]\n",
+      " [ 0 21 21 21 21 21 21  0]\n",
+      " [ 0 21 21 21 21 21 21  0]\n",
+      " [ 0 21 21 21 21 21 21  0]\n",
+      " [ 0 21 21 21 21 21 21  0]\n",
+      " [ 0  0  0  0  0  0  0  0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix16 = np.full((6,6),21)\n",
+    "print(np.pad(matrix16,1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -317,11 +517,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "109cf327",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "False\n",
+      "False\n",
+      "nan\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0 * np.nan)\n",
+    "print(np.nan == np.nan)\n",
+    "print(np.inf > np.nan)\n",
+    "print(np.nan - np.nan)\n",
+    "print(np.nan in set([np.nan]))\n",
+    "print(0.3 == 3 * 0.1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -333,11 +553,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f2e6cfa6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0]\n",
+      " [1 0 0 0 0]\n",
+      " [0 2 0 0 0]\n",
+      " [0 0 3 0 0]\n",
+      " [0 0 0 4 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix18 = np.diag([1,2,3,4],-1)\n",
+    "print(matrix18)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,11 +584,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "cabdf298",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 8, 0, 8, 0, 8, 0, 8],\n",
+       "       [8, 0, 8, 0, 8, 0, 8, 0],\n",
+       "       [0, 8, 0, 8, 0, 8, 0, 8],\n",
+       "       [8, 0, 8, 0, 8, 0, 8, 0],\n",
+       "       [0, 8, 0, 8, 0, 8, 0, 8],\n",
+       "       [8, 0, 8, 0, 8, 0, 8, 0],\n",
+       "       [0, 8, 0, 8, 0, 8, 0, 8],\n",
+       "       [8, 0, 8, 0, 8, 0, 8, 0]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix19 = np.zeros((8,8),dtype=int)\n",
+    "\n",
+    "matrix19[1::2,::2] = 8\n",
+    "matrix19[::2,1::2] = 8\n",
+    "matrix19"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -365,11 +624,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "de8b0245",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0]]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix20 = np.zeros((6,7,8),dtype=int)\n",
+    "matrix20[1,5,3] = 1\n",
+    "matrix20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "b8189260",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 5, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.unravel_index(99,(6,7,8)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -382,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6da26fd3",
+   "id": "f6c6586a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1680,7 +2018,25 @@
    "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
